[gd_scene load_steps=4 format=3 uid="uid://clqclcapsigic"]

[ext_resource type="Script" path="res://player/HUD.gd" id="1_ng4yi"]
[ext_resource type="Theme" uid="uid://dqpi7q86nj3eu" path="res://main_menu/theme.tres" id="2_rfrr3"]
[ext_resource type="Texture2D" uid="uid://eqirnj1jvqh7" path="res://assets/dash.png" id="3_7jlpk"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ng4yi")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rfrr3")

[node name="Label_Speed" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -26.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0
text = "SPEED"

[node name="Label_Time" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_right = 23.5
offset_bottom = 26.0
grow_horizontal = 2
text = "SS:MS"
horizontal_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.875, 1.875)
max_value = 2.0
value = 2.0
fill_mode = 3
texture_progress = ExtResource("3_7jlpk")

[node name="Label_Dashs" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -57.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 0
grow_vertical = 0
text = "2
"
horizontal_alignment = 1
